@@ -14,6 +14,7 @@ What's new
 Minor features
 ~~~~~~~~~~~~~~
 
+ * Page slugs now allow unicode on Django >= 1.9 (Behzad Nategh)
  * Image upload form in image chooser now performs client side validation so that the selected file is not lost in the submission (Jack Paine)
 
 
